website/websites/gp4/code/nsievebits-gcj-5.log
BUILD COMMANDS FOR: nsievebits.gcj-5.gcj

Mon May 12 19:16:21 PDT 2008

/usr/bin/gcj -x java -O3 -fomit-frame-pointer -march=pentium4  -fno-bounds-check -fno-store-check -o nsievebits.gcj-5.gcj_run --main=nsievebits nsievebits.gcj-5.javagcj
nsievebits.gcj-5.javagcj: In class 'nsievebits':
nsievebits.gcj-5.javagcj: In method 'nsievebits.primes(int,int[])':
nsievebits.gcj-5.javagcj:45: error: Can't find method 'printf(Ljava/lang/String;II)' in type 'java.io.PrintStream'.
        System.out.printf("Primes up to %8d %8d\n", m, count);
                     ^
1 error
make[3]: [nsievebits.gcj-5.gcj_run] Error 1 (ignored)
rm nsievebits.gcj-5.javagcj

=================================================================
COMMAND LINE (%A is single numeric argument):

nsievebits.gcj-5.gcj_run %A
Error, could not exec nsievebits.gcj-5.gcj_run 9 (No such file or directory)
PATH=/home/dunham/gp4/shootout/bench/nsievebits:/home/dunham/gp4/shootout/bench/nsievebits/tmp:/opt/intel/cc/10.1.012/bin:/opt/intel/fc/10.1.012/bin:/usr/local/bin:/usr/bin:/bin:/opt/bin:/usr/i686-pc-linux-gnu/gcc-bin/4.1.2:/opt/sun-jdk-1.4.2.16/bin:/opt/sun-jdk-1.4.2.16/jre/bin:/opt/sun-jdk-1.4.2.16/jre/javaws:/usr/qt/3/bin:/usr/i686-pc-linux-gnu/gnat-gpl-bin/4.1:/usr/libexec/gnat-gpl/i686-pc-linux-gnu/4.1:/usr/games/bin:/opt/cint-5.16.19:/opt/kroc-1.4.0/install/bin:/opt/sun-jdk-1.6.0.06/bin:/opt/sun-jdk-1.4.2.16/bin:/opt/mozart/bin:/opt/groovy-1.6-beta-1/bin:/opt/smlnj/bin:/usr/local/lib/squeak/3.9-8:/opt/stx:/opt/jruby-1.1/bin:/opt/Quark:/opt/gnat/bin
TEST FAILED - Child processed exited with error code (1)


PROGRAM OUTPUT
==============
